--- a/src/pages/articles/2022-01-10-test.md
+++ b/src/pages/articles/2022-01-10-test.md
@@ -4,6 +4,7 @@ title: Test
 date: 2022-01-10T12:15:03.726Z
 auteur: Test
 description: Test
+featuredpost: false
 featuredimage: /img/49375037576_116e4231ef_k.jpg
 tags:
   - test
