--- a/src/pages/articles/2022-01-10-test-2.md
+++ b/src/pages/articles/2022-01-10-test-2.md
@@ -19,7 +19,9 @@ tags:
 ---
 # **Définition du shaping**
 
-Le terme shaping se traduit de l’anglais comme l’action de façonner. C’est donc une méthode d’apprentissage ayant pour but de construire un nouveau comportement. Cette méthode s’appuie sur les propositions du chien, renforcées positivement par l’humain. Ces propositions ont pour objectif de mener progressivement à un comportement souhaité en le décomposant. 
+
+
+Le terme shaping se traduit de l’anglais comme l’action de **façonner**. C’est donc une méthode d’apprentissage ayant pour but de construire un nouveau comportement. Cette méthode s’appuie sur les propositions du chien, renforcées positivement par l’humain. Ces propositions ont pour objectif de mener progressivement à un comportement souhaité en le décomposant. 
 
 Cette méthode va faire intervenir le conditionnement opérant, par le biais du renforcement positif.
 Mais qu’est-ce que le conditionnement opérant ? Qu’est-ce que le renforcement positif ? Ça se mange ?
@@ -29,38 +31,48 @@ Oui et non.
 
 # **Le conditionnement**
 
-Le conditionnement dit classique a été formalisé grâce au Docteur Ivan Pavlov qui a mené des investigations précises à ce sujet. C’est un processus par lequel un individu va associer une réponse déjà “programmée”, qui est normalement déclenchée par un stimulus “conditionné”, à un autre stimulus ajouté. Pavlov a expérimenté ce concept en associant le bruit d’une cloche à l’arrivée du repas d’un chien. Les données de départ sont : le réflexe salivaire du chien à la vue de son repas, ainsi que sa non réaction au bruit de la cloche. Ensuite, introduction du bruit de la cloche juste avant la délivrance du repas du chien. La finalité de l’expérience: le seul bruit de la cloche déclenche le réflexe salivaire du chien.
-Le “clic” associé au clicker correspond à ce type de conditionnement. 
 
-Le processus d’apprentissage fera également intervenir le conditionnement opérant de Skinner (Burrhus Frederic Skinner, psychologue) qui permet l’introduction d’autres facteurs liés notamment à l’environnement. Contrairement au conditionnement classique, l’animal va déclencher par lui-même le circuit de récompense en actionnant un levier-réponse permettant la délivrance de la récompense alimentaire. 
 
-Pour comparer plus succinctement les deux processus : avec le conditionnement pavlovien, le renforcement sera déclenché par l’expérimentateur ; avec le conditionnement skinnerien elle dépend de la réponse du sujet. On peut donc remarquer que dans le processus d’apprentissage au shaping (ou d’autres méthodes), on retrouve un mix de ces deux types de conditionnement. 
+Le **conditionnement dit classique** a été formalisé grâce au Docteur **Ivan Pavlov** qui a mené des investigations précises à ce sujet. C’est un processus par lequel un individu va associer une réponse déjà “programmée”, qui est normalement déclenchée par un stimulus “conditionné”, à un autre stimulus ajouté. Pavlov a expérimenté ce concept en associant le bruit d’une cloche à l’arrivée du repas d’un chien. Les données de départ sont : le réflexe salivaire du chien à la vue de son repas, ainsi que sa non réaction au bruit de la cloche. Ensuite, introduction du bruit de la cloche juste avant la délivrance du repas du chien. La finalité de l’expérience: le seul bruit de la cloche déclenche le réflexe salivaire du chien.
+Le “clic” associé au **clicker** correspond à ce type de conditionnement. 
 
-Mais conditionner ne veut pas dire robotiser pour autant. Il faut savoir que tout être-vivant est plus ou moins conditionné par son environnement. En effet, le conditionnement peut aussi bien être opéré avec l’ajout d’un renforçateur positif comme négatif (pour le shaping on utilise exclusivement un renforçateur positif), et le renforçateur n’est pas toujours une récompense alimentaire. 
+Le processus d’apprentissage fera également intervenir le **conditionnement opérant de Skinner** (Burrhus Frederic Skinner, psychologue) qui permet l’introduction d’autres facteurs liés notamment à l’environnement. Contrairement au conditionnement classique, l’animal va déclencher par lui-même le circuit de récompense en actionnant un levier-réponse permettant la délivrance de la récompense alimentaire. 
+
+> Pour comparer plus succinctement les deux processus : avec le conditionnement pavlovien, le renforcement sera déclenché par l’expérimentateur ; avec le conditionnement skinnerien elle dépend de la réponse du sujet. On peut donc remarquer que dans le processus d’apprentissage au shaping (ou d’autres méthodes), on retrouve un mix de ces deux types de conditionnement. 
+
+
+
+Mais ***conditionner ne veut pas dire robotiser*** pour autant. Il faut savoir que tout être-vivant est plus ou moins conditionné par son environnement. En effet, le conditionnement peut aussi bien être opéré avec l’ajout d’un renforçateur positif comme négatif (pour le shaping on utilise exclusivement un renforçateur positif), et le renforçateur n’est pas toujours une récompense alimentaire. 
 Prenons des exemples de réponses conditionnées afin de déconstruire la mauvaise image de ce concept. Quand nous sommes enfants, on apprend à répondre à un "bonjour" par un "bonjour", par mimétisme, par apprentissage des bonnes manières ou alors en réponse à la pression de l'environnement (regards interrogateurs, parents qui nous demandent activement de répondre etc). 
-Pour aller plus loin, on peut prendre l’illustration d’un comportement “conditionné” que mes chiens peuvent avoir: quand je sors les tapis antidérapants ils se jettent dessus. Pourquoi ? Les tapis sont devenus synonymes de récompense primaire (alimentaire), de moment privilégié avec l’humain  et donc ont une résonance positive pour eux. Et du côté humain on pourrait le comparer avec quoi ? Bah par exemple, pour les aficionados de la raclette, quand on vous sort l'appareil à raclette devant vous, vous n'avez qu'une envie c'est de prendre votre poêlon. Ce précieux appareil résonne en vous comme l’arrivée d’un type d’aliment qui vous fait saliver. Et pour aller encore plus loin sur ces deux exemples, on peut en venir à la notion de plaisir dans ces deux situations. Certains diront que le chien ne prend pas de plaisir quand on travaille car les tapis sont juste associés à de l’apport de nourriture. Cependant si on reprend l'exemple de la raclette, au delà de l’appréciation de ce mets, vous prendrez plaisir à passer un bon moment d'interactions sociales avec vos proches, à arranger votre petite préparation avant de déguster. De la même manière, le chien va prendre plaisir à passer un moment privilégié avec vous, apprendre des choses pour lesquelles il sera récompensé..
+Pour aller plus loin, on peut prendre l’illustration d’un comportement “conditionné” que mes chiens peuvent avoir: quand je sors les tapis antidérapants ils se jettent dessus. Pourquoi ? Les tapis sont devenus synonymes de récompense primaire (alimentaire), de moment privilégié avec l’humain  et donc ont une résonance positive pour eux. 
 
-Enfin on peut relier dans la majorité des cas le conditionnement aux habitudes; à force de renforcer un comportement, celui-ci finit par s’ancrer avec une réponse quasi systématique. S'arrêter à un passage piéton, tenir la porte pour une personne qui arrive derrière nous, éteindre la lumière quand on sort d'une pièce, etc. Tant de comportements, d'habitudes qui s'ancrent au fil des expériences et des apprentissages. Et bien figurez-vous que c'est la même chose pour les chiens, au début on demande avant que ça devienne une (bonne) habitude : attendre avant de passer les portes, venir au pied quand on croise un jogger, marcher sur les trottoirs sans en descendre : du conditionnement et surtout de bonnes habitudes permettant à tout un chacun d'évoluer sainement dans l'environnement (autres humains, chiens etc). 
+Et du côté humain on pourrait le comparer avec quoi ? Bah par exemple, pour les aficionados de la raclette, quand on vous sort l'appareil à raclette devant vous, vous n'avez qu'une envie c'est de prendre votre poêlon. Ce précieux appareil résonne en vous comme l’arrivée d’un type d’aliment qui vous fait saliver. Et pour aller encore plus loin sur ces deux exemples, on peut en venir à la notion de plaisir dans ces deux situations. Certains diront que le chien ne prend pas de plaisir quand on travaille car les tapis sont juste associés à de l’apport de nourriture. Cependant si on reprend l'exemple de la raclette, au delà de l’appréciation de ce mets, vous prendrez plaisir à passer un bon moment d'interactions sociales avec vos proches, à arranger votre petite préparation avant de déguster. De la même manière, le chien va **prendre plaisir à passer un moment privilégié avec vous**, apprendre des choses pour lesquelles il sera récompensé..
+
+Enfin on peut relier dans la majorité des cas le conditionnement aux habitudes; à force de renforcer un comportement, celui-ci finit par s’ancrer avec une **réponse quasi systématique**. S'arrêter à un passage piéton, tenir la porte pour une personne qui arrive derrière nous, éteindre la lumière quand on sort d'une pièce, etc. Tant de comportements, d'habitudes qui s'ancrent au fil des expériences et des apprentissages. Et bien figurez-vous que c'est la même chose pour les chiens, au début on demande avant que ça devienne une (bonne) habitude : attendre avant de passer les portes, venir au pied quand on croise un jogger, marcher sur les trottoirs sans en descendre : du conditionnement et surtout de bonnes habitudes permettant à tout un chacun d'évoluer sainement dans l'environnement (autres humains, chiens etc). 
 
 
 
-# Le renforcement positif 
+# Le renforcement positif
 
-Le renforcement positif (R+) est le deuxième pilier du shaping. Il permet de défier la peur de l’échec et de valoriser votre chien. Il correspond à l’ajout d’un renforçateur agréable pour le chien en réponse à un comportement souhaité (récompense alimentaire, jeu, gratouilles). 
-A contrario, la punition positive (P+) annihilerait la capacité de prise de décisions de l’individu. En effet, la punition positive correspond au fait d’ajouter un élément désagréable voire douloureux en réponse à un comportement non désiré (par exemple, si le chien tire en laisse on donne un coup sec sur le collier pour qu’il arrête de tirer).
-Il existe également dans l’éducation le renforcement négatif (R-) qui correspond au fait d’enlever un stimulus désagréable, aversif pour obtenir un comportement attendu (par exemple, demander au chien à s’asseoir en venant mettre une pression sur l’arrière main du chien et répondre à la bonne réponse par le retrait de la pression).
-Et enfin il y a la punition négative (P-) correspond au fait de retirer un stimulus agréable pour le chien en réponse à un comportement non désiré (par exemple, si le chien tire en laisse on s’arrête (arrêt du mouvement : retrait du stimulus agréable pour le chien), on attend que le chien libère la pression sur la laisse pour repartir).
+
+
+Le renforcement positif (R+) est le deuxième pilier du shaping. Il permet de défier la peur de l’échec et de valoriser votre chien. Il correspond à l’ajout d’un **renforçateur agréable pour le chien** en réponse à un comportement souhaité (récompense alimentaire, jeu, gratouilles). 
+A contrario, la **punition positive** (P+) annihilerait la capacité de prise de décisions de l’individu. En effet, la punition positive correspond au fait d’ajouter un élément désagréable voire douloureux en réponse à un comportement non désiré (par exemple, si le chien tire en laisse on donne un coup sec sur le collier pour qu’il arrête de tirer).
+Il existe également dans l’éducation le **renforcement négatif** (R-) qui correspond au fait d’enlever un stimulus désagréable, aversif pour obtenir un comportement attendu (par exemple, demander au chien à s’asseoir en venant mettre une pression sur l’arrière main du chien et répondre à la bonne réponse par le retrait de la pression).
+Et enfin il y a la **punition négative** (P-) correspond au fait de retirer un stimulus agréable pour le chien en réponse à un comportement non désiré (par exemple, si le chien tire en laisse on s’arrête (arrêt du mouvement : retrait du stimulus agréable pour le chien), on attend que le chien libère la pression sur la laisse pour repartir).
+
+
 
 ## Matériel nécessaire pour pratiquer le shaping
 
+
+
 1. **un clicker** : Le principe du clicker se base sur le fonctionnement de l’amygdale (se trouvant au niveau cérébrale). Cette amygdale est essentielle à notre capacité de ressentir et de percevoir chez les autres certaines émotions. Elle s’active selon certains stimuli. Le clicker a été créé pour être le déclencheur de son fonctionnement. 
    C’est un outil qui permet d’agir avec une grande précision et une certaine rapidité. Le clicker est fait pour stimuler les amygdales et donc décupler les capacités d’apprentissages; un bruit lambda (claquement de langue, sifflet, stylo..) n’est donc utile que pour la précision et la rapidité de la capture du comportement (à condition que vous arriviez à le faire précisément). En effet, ce type de bruit ne provoquera pas de réaction amygdalienne. 
-   Le son que le clicker produit va ainsi annoncer à votre chien la venue d’une récompense alimentaire auquel il devra être préalablement conditionné (il faudra préparer le chien à cette réponse en lui présentant le bruit associé à la récompense alimentaire → conditionnement pavlovien). Le clicker active ainsi le circuit de récompense. Pour que son utilisation soit efficiente il faut respecter une règle de base : un click = une récompense. Chaque click, même raté (comportement non souhaité cliqué, trop tôt, trop tard), doit toujours être suivi du renforçateur. Cet outil est ainsi très utile dans l’apprentissage d’un comportement, son utilisation tend à disparaître une fois le comportement acquis.
-2. **des friandises** : elles doivent être facilement assimilables et appétentes (fromage, knackies, viande séchée… à vous de trouver ce qui lui plait) ou sa propre ration de croquettes s’il est assez gourmand. La valeur des friandises devra varier en fonction des lieux de la séance. Évidemment si c’est votre première séance, ce sera en intérieur avec des friandises appétentes pour que le principe de ce “jeu” soit facilement compréhensible et positivement associé par votre chien. Des chiens plus expérimentés peuvent faire des séances n’importe où, n’importe quand et avec n’importe quel type de friandises du moment qu’ils vous ont exprimé leur envie de travailler.
-3. **un sol adapté**: il doit être non glissant et pas trop dur afin de ne  pas impacter les articulations lors des réceptions de sauts. Si vous travaillez en intérieur sur carrelage ou parquet, pensez à ajouter un tapis de gym afin d’avoir une surface antidérapante et amortissante pour travailler en sécurité. Les surfaces trop molles type canapé, lit sont à préconiser seulement pour le travail en position couchée.
+   Le son que le clicker produit va ainsi annoncer à votre chien la venue d’une récompense alimentaire auquel il devra être préalablement conditionné (il faudra préparer le chien à cette réponse en lui présentant le bruit associé à la récompense alimentaire → conditionnement pavlovien). Le clicker active ainsi le circuit de récompense. Pour que son utilisation soit efficiente il faut respecter une règle de base : un click = une récompense. ***Chaque click, même raté (comportement non souhaité cliqué, trop tôt, trop tard), doit toujours être suivi du renforçateur.*** Cet outil est ainsi très utile dans l’apprentissage d’un comportement, son utilisation tend à disparaître une fois le comportement acquis.
+2. **des friandises** : elles doivent être facilement assimilables et appétentes (fromage, knackies, viande séchée… à vous de trouver ce qui lui plait) ou sa propre ration de croquettes s’il est assez gourmand. La valeur des friandises devra varier en fonction des lieux de la séance. Évidemment si c’est votre première séance, ce sera en intérieur avec des friandises ***appétentes*** pour que le principe de ce “jeu” soit facilement compréhensible et positivement associé par votre chien. Des chiens plus expérimentés peuvent faire des séances n’importe où, n’importe quand et avec n’importe quel type de friandises du moment qu’ils vous ont exprimé leur envie de travailler.
+3. **un sol adapté**: il doit être non glissant et pas trop dur afin de ne  pas impacter les articulations lors des réceptions de sauts. Si vous travaillez en intérieur sur carrelage ou parquet, pensez à ajouter un tapis de gym afin d’avoir une surface antidérapante et amortissante pour ***travailler en sécurité***. Les surfaces trop molles type canapé, lit sont à préconiser seulement pour le travail en position couchée.
 4. **objets extérieurs (optionnel)**: cibles, jouets, plots, piquets, etc… tout ce qui est nécessaire à l’apprentissage souhaité. 
-
-
 
 # Les différents types de shaping
 
@@ -79,7 +91,7 @@ le chien va croiser ses pattes sans la cible
 le chien doit tenir la position deux à trois secondes
 introduction du signal vocal choisi
 
-> shaping “pur” : ici on clique une proposition qui nous intéresse avec une idée de finalité bien précise en tête
+> **shaping “pur”** : ici on clique une proposition qui nous intéresse avec une idée de finalité bien précise en tête
 
 ***→ exemple de plan***: lever la patte haut 
 on renforce la position de base souhaitée (assis ou debout pour ici)
@@ -92,11 +104,13 @@ introduction du signal vocal choisi
 
 > **free shaping** : le but est de cliquer toute proposition de son chien, sans attente d’un mouvement particulier. On pourra le mettre sous signal ou pas.
 
-**→ exemple de plan**: pas de plan type car c’est réellement au bon vouloir de votre chien et à votre bon vouloir de cliquer ce qui vous amuse. Une fois un mouvement proposé (par votre chien) et choisi (par vous), il faudra vous y tenir afin de ne pas “perdre” votre chien. 
+***→ exemple de plan***: pas de plan type car c’est réellement au bon vouloir de votre chien et à votre bon vouloir de cliquer ce qui vous amuse. Une fois un mouvement proposé (par votre chien) et choisi (par vous), il faudra vous y tenir afin de ne pas “perdre” votre chien. 
 
 
 
 # Les plus et moins du shaping
+
+
 
 **Les plus** : cela permet au chien d’apprendre au chien à réfléchir par lui-même, et à prendre des initiatives. Cette méthode valorise le chien et lui fait prendre confiance en lui. Cela amuse le chien et a  donc un impact sur la vie quotidienne.  
 
